{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 28,
  "lineage": "d6d71c05-cece-ff59-5f30-8d77149c920f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:network-acl/acl-090247eb9b9b16f9f",
            "default_network_acl_id": "acl-090247eb9b9b16f9f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-090247eb9b9b16f9f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "423623832118",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-009f87d92616befd0",
              "subnet-0197a32b6f0bb358e",
              "subnet-01d93348ae1be995a",
              "subnet-0417a404b831f3a1c",
              "subnet-07090f040e7e17544",
              "subnet-0ce78019eb3196645"
            ],
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-default",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-default",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:route-table/rtb-02a9257c41f25729f",
            "default_route_table_id": "rtb-02a9257c41f25729f",
            "id": "rtb-02a9257c41f25729f",
            "owner_id": "423623832118",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-default",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-default",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:security-group/sg-016ff039e76c96be4",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-016ff039e76c96be4",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "423623832118",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-default",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-default",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbdbcec49ba86a60",
            "arn": "arn:aws:ec2:us-east-1:423623832118:elastic-ip/eipalloc-0dbdbcec49ba86a60",
            "domain": "vpc",
            "id": "eipalloc-0dbdbcec49ba86a60",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-194-15-132.compute-1.amazonaws.com",
            "public_ip": "44.194.15.132",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01990e5d48be469b4",
            "arn": "arn:aws:ec2:us-east-1:423623832118:elastic-ip/eipalloc-01990e5d48be469b4",
            "domain": "vpc",
            "id": "eipalloc-01990e5d48be469b4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-90-249-81.compute-1.amazonaws.com",
            "public_ip": "98.90.249.81",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:internet-gateway/igw-0da3dd9f4ec229ee6",
            "id": "igw-0da3dd9f4ec229ee6",
            "owner_id": "423623832118",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbdbcec49ba86a60",
            "association_id": "eipassoc-07e861463a5a22643",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01d421c76fde2f067",
            "network_interface_id": "eni-0ff466874c9b82dc0",
            "private_ip": "172.50.1.249",
            "public_ip": "44.194.15.132",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ce78019eb3196645",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01990e5d48be469b4",
            "association_id": "eipassoc-04d04df43a07d3da7",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fa5be9082c717830",
            "network_interface_id": "eni-0bd5e40ecc697ca82",
            "private_ip": "172.50.2.157",
            "public_ip": "98.90.249.81",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0417a404b831f3a1c",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cbf354a12dac99b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01d421c76fde2f067",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0cbf354a12dac99b4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0cbf354a12dac99b4"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-057106e898191e13a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fa5be9082c717830",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-057106e898191e13a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-057106e898191e13a"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0da3dd9f4ec229ee6",
            "id": "r-rtb-05d740611c90dc16a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-05d740611c90dc16a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-05d740611c90dc16a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:route-table/rtb-0cbf354a12dac99b4",
            "id": "rtb-0cbf354a12dac99b4",
            "owner_id": "423623832118",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtb-0cbf354a12dac99b4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:route-table/rtb-057106e898191e13a",
            "id": "rtb-057106e898191e13a",
            "owner_id": "423623832118",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtb-057106e898191e13a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:route-table/rtb-05d740611c90dc16a",
            "id": "rtb-05d740611c90dc16a",
            "owner_id": "423623832118",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-public",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-public",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtb-05d740611c90dc16a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0752051a8c6fab2cf",
            "region": "us-east-1",
            "route_table_id": "rtb-0cbf354a12dac99b4",
            "subnet_id": "subnet-07090f040e7e17544"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtbassoc-0752051a8c6fab2cf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2bef3728d3bfcf7",
            "region": "us-east-1",
            "route_table_id": "rtb-057106e898191e13a",
            "subnet_id": "subnet-0197a32b6f0bb358e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtbassoc-0f2bef3728d3bfcf7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f642f63f5565d8f",
            "region": "us-east-1",
            "route_table_id": "rtb-0cbf354a12dac99b4",
            "subnet_id": "subnet-009f87d92616befd0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtbassoc-07f642f63f5565d8f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1fb4268afb86adc",
            "region": "us-east-1",
            "route_table_id": "rtb-057106e898191e13a",
            "subnet_id": "subnet-01d93348ae1be995a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtbassoc-0d1fb4268afb86adc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020d8f0de6d9dd2dc",
            "region": "us-east-1",
            "route_table_id": "rtb-05d740611c90dc16a",
            "subnet_id": "subnet-0ce78019eb3196645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtbassoc-020d8f0de6d9dd2dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0414699c4f951f054",
            "region": "us-east-1",
            "route_table_id": "rtb-05d740611c90dc16a",
            "subnet_id": "subnet-0417a404b831f3a1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "rtbassoc-0414699c4f951f054",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:subnet/subnet-07090f040e7e17544",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.50.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07090f040e7e17544",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623832118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "app-and-db",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "app-and-db",
              "Type": "private"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "subnet-07090f040e7e17544",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:subnet/subnet-0197a32b6f0bb358e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.50.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0197a32b6f0bb358e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623832118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "app-and-db",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "app-and-db",
              "Type": "private"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "subnet-0197a32b6f0bb358e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:subnet/subnet-009f87d92616befd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.50.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009f87d92616befd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623832118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "app-and-db",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "app-and-db",
              "Type": "private"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "subnet-009f87d92616befd0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:subnet/subnet-01d93348ae1be995a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.50.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d93348ae1be995a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623832118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "app-and-db",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-private-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "app-and-db",
              "Type": "private"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "subnet-01d93348ae1be995a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:subnet/subnet-0ce78019eb3196645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.50.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce78019eb3196645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623832118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-public-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "load-balancer-bastion",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-public-us-east-1a",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "load-balancer-bastion",
              "Type": "public"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "subnet-0ce78019eb3196645",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:subnet/subnet-0417a404b831f3a1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.50.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0417a404b831f3a1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423623832118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc-public-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "load-balancer-bastion",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc-public-us-east-1b",
              "Project": "ShopNaija",
              "Terraform": "true",
              "Tier": "load-balancer-bastion",
              "Type": "public"
            },
            "vpc_id": "vpc-0dda5acd5ba7538bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "subnet-0417a404b831f3a1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:423623832118:vpc/vpc-0dda5acd5ba7538bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.50.0.0/16",
            "default_network_acl_id": "acl-090247eb9b9b16f9f",
            "default_route_table_id": "rtb-02a9257c41f25729f",
            "default_security_group_id": "sg-016ff039e76c96be4",
            "dhcp_options_id": "dopt-009dbbc018eb158ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dda5acd5ba7538bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a9257c41f25729f",
            "owner_id": "423623832118",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "Name": "shopnaija-vpc",
              "Project": "ShopNaija",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "shopnaija-vpc",
              "Project": "ShopNaija",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423623832118",
            "id": "vpc-0dda5acd5ba7538bb",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}